Touch Action could cause wheel gestures to be filtered.

If the source device is not touchscreen the touch action filter
should not do anything. A certain drop list in
Google maps was failing to scroll via wheel scrolling because it had
installed a touch action none filter.

BUG=607495

Review-Url: https://codereview.chromium.org/1971273002
Cr-Commit-Position: refs/heads/master@{#393348}

Former-commit-id: 3a5f4dbe106611593f05ba7ae163d1660f219f6a