content/browser/renderer_host/input/touch_action_filter_unittest.cc
@@ -41,7 +41,7 @@ static void PanTest(TouchAction action,
     filter.OnSetTouchAction(action);
 
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(0, 0);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(0, 0, kSourceDevice);
     EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent scroll_update =
@@ -59,7 +59,8 @@ static void PanTest(TouchAction action,
     filter.ResetTouchAction();
     filter.OnSetTouchAction(action);
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(scroll_x, scroll_y);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(scroll_x, scroll_y,
+                                                          kSourceDevice);
     EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent scroll_update =
@@ -92,7 +93,8 @@ static void PanTest(TouchAction action,
     filter.ResetTouchAction();
     filter.OnSetTouchAction(action);
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(scroll_y, scroll_x);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(scroll_y, scroll_x,
+                                                          kSourceDevice);
     EXPECT_TRUE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent scroll_update =
@@ -111,7 +113,7 @@ TEST(TouchActionFilterTest, SimpleFilter) {
   TouchActionFilter filter;
 
   WebGestureEvent scroll_begin =
-      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3);
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3, kSourceDevice);
   const float kDeltaX = 5;
   const float kDeltaY = 10;
   WebGestureEvent scroll_update =
@@ -187,7 +189,7 @@ TEST(TouchActionFilterTest, Fling) {
   TouchActionFilter filter;
 
   WebGestureEvent scroll_begin =
-      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3);
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3, kSourceDevice);
   WebGestureEvent scroll_update =
       SyntheticWebGestureEventBuilder::BuildScrollUpdate(5, 10, 0,
                                                          kSourceDevice);
@@ -301,7 +303,7 @@ TEST(TouchActionFilterTest, PanXY) {
     filter.ResetTouchAction();
     filter.OnSetTouchAction(TOUCH_ACTION_PAN);
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(-7, 6);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(-7, 6, kSourceDevice);
     EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent scroll_update =
@@ -323,7 +325,7 @@ TEST(TouchActionFilterTest, PanXY) {
     filter.ResetTouchAction();
     filter.OnSetTouchAction(TOUCH_ACTION_PAN);
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(-6, 7);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(-6, 7, kSourceDevice);
     EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent scroll_update =
@@ -359,7 +361,7 @@ TEST(TouchActionFilterTest, MultiTouch) {
   TouchActionFilter filter;
 
   WebGestureEvent scroll_begin =
-      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3);
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3, kSourceDevice);
   const float kDeltaX = 5;
   const float kDeltaY = 10;
   WebGestureEvent scroll_update =
@@ -394,7 +396,7 @@ TEST(TouchActionFilterTest, Pinch) {
   TouchActionFilter filter;
 
   WebGestureEvent scroll_begin =
-      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3);
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3, kSourceDevice);
   WebGestureEvent pinch_begin = SyntheticWebGestureEventBuilder::Build(
       WebInputEvent::GesturePinchBegin, kSourceDevice);
   WebGestureEvent pinch_update =
@@ -590,7 +592,7 @@ TEST(TouchActionFilterTest, TouchActionResetsOnResetTouchAction) {
   WebGestureEvent tap = SyntheticWebGestureEventBuilder::Build(
       WebInputEvent::GestureTap, kSourceDevice);
   WebGestureEvent scroll_begin =
-      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3);
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3, kSourceDevice);
   WebGestureEvent scroll_end = SyntheticWebGestureEventBuilder::Build(
       WebInputEvent::GestureScrollEnd, kSourceDevice);
 
@@ -611,7 +613,7 @@ TEST(TouchActionFilterTest, TouchActionResetMidSequence) {
   TouchActionFilter filter;
 
   WebGestureEvent scroll_begin =
-      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3);
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(2, 3, kSourceDevice);
   WebGestureEvent pinch_begin = SyntheticWebGestureEventBuilder::Build(
       WebInputEvent::GesturePinchBegin, kSourceDevice);
   WebGestureEvent pinch_update =
@@ -657,7 +659,7 @@ TEST(TouchActionFilterTest, ZeroVelocityFlingsConvertedToScrollEnd) {
     filter.ResetTouchAction();
     filter.OnSetTouchAction(TOUCH_ACTION_PAN_Y);
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(-6, 7);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(-6, 7, kSourceDevice);
     EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent fling_start = SyntheticWebGestureEventBuilder::BuildFling(
@@ -674,7 +676,7 @@ TEST(TouchActionFilterTest, ZeroVelocityFlingsConvertedToScrollEnd) {
     filter.ResetTouchAction();
     filter.OnSetTouchAction(TOUCH_ACTION_PAN_X);
     WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(-7, 6);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(-7, 6, kSourceDevice);
     EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 
     WebGestureEvent fling_start = SyntheticWebGestureEventBuilder::BuildFling(
@@ -682,6 +684,19 @@ TEST(TouchActionFilterTest, ZeroVelocityFlingsConvertedToScrollEnd) {
     EXPECT_FALSE(filter.FilterGestureEvent(&fling_start));
     EXPECT_EQ(WebInputEvent::GestureScrollEnd, fling_start.type);
   }
+}
+
+TEST(TouchActionFilterTest, TouchpadScroll) {
+  TouchActionFilter filter;
+
+  WebGestureEvent scroll_begin =
+      SyntheticWebGestureEventBuilder::BuildScrollBegin(
+          2, 3, blink::WebGestureDeviceTouchpad);
+
+  // TOUCH_ACTION_NONE filters out only touchscreen scroll events.
+  filter.ResetTouchAction();
+  filter.OnSetTouchAction(TOUCH_ACTION_NONE);
+  EXPECT_FALSE(filter.FilterGestureEvent(&scroll_begin));
 }
 
 }  // namespace content
