content/browser/web_contents/web_contents_view_aura_browsertest.cc
@@ -958,7 +958,8 @@ IN_PROC_BROWSER_TEST_F(WebContentsViewAuraTest,
     ASSERT_EQ(INPUT_EVENT_ACK_STATE_NOT_CONSUMED, filter()->last_ack_state());
 
     blink::WebGestureEvent scroll_begin =
-        SyntheticWebGestureEventBuilder::BuildScrollBegin(1, 1);
+        SyntheticWebGestureEventBuilder::BuildScrollBegin(
+            1, 1, blink::WebGestureDeviceTouchscreen);
     GetRenderWidgetHost()->ForwardGestureEventWithLatencyInfo(
         scroll_begin, ui::LatencyInfo());
     // Scroll begin ignores ack disposition, so don't wait for the ack.
